--- a/templates/creators.html
+++ b/templates/creators.html
@@ -49,7 +49,7 @@
       <div class="card mb-3" style="max-width: 100vw;">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="/static/nilesh.jpg" class="card-img" alt="...">
+            <img src="../static/nilesh.jpg" class="card-img" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
