--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
               </li>                      
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <a class="btn btn-outline-success my-2 my-sm-0" href="./contact.html" role="button">START A NEW PROJECT</a>
+            <a class="btn btn-outline-success my-2 my-sm-0" href="./user_location.html" role="button">START A NEW PROJECT</a>
           </form>
 
         </div>
