--- a/templates/building_details.html
+++ b/templates/building_details.html
@@ -35,7 +35,7 @@
                   <div class="alert alert-danger" role="alert">
                     NOTE : At NERKS, currently we approximate buildings to a cuiboid of given length, breadth and height for our analysis.
                   </div>
-                    <form action="/input2">
+                    <form action="/station">
                       
                       <div class="form-group">
                         <label for="exampleInputEmail1">LENGTH</label>
