--- a/templates/comfort.html
+++ b/templates/comfort.html
@@ -4,16 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+    crossorigin=""/>
+
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+    crossorigin=""></script>
+    <style>
+        #mapid {
+             height: 90vh;
+             }
+    </style>
 </head>
 <body>
-    <form action="/showtime">
+
+
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">
+          <img src="/static/logo.jpeg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+          NERKS.
+        </a>
+      </nav>
+
+    
+      
+      <div class="card mb-3" style="max-width: 100vw;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <div class="card bg-light" style="height: 0vmax;">
+                <div class="card-body">
+                  <div class="alert alert-primary" role="alert">
+                    Step 1 : On the right side of the screen, you may find the available types of construction.
+                  </div>
+                  <div class="alert alert-primary" role="alert">
+                    Step 2 : Enter the name of construction as shown on the screen based on your choice.
+                  </div>
+                  <div class="alert alert-primary" role="alert">
+                    Step 3 : Click on submit!
+                  </div>
+                  <div class="alert alert-danger" role="alert">
+                    NOTE : Please enter the type of construction exactly as shown on the right side of the screen.
+                  </div>
+
+                    <form action="/input1">
                       
-        <div class="form-group">
-          <label for="exampleInputEmail1">SHOWTIME</label>
-          <input name = "ws" type="text">
-          <small id="emailHelp" class="form-text text-muted"></small>
+                      <div class="form-group">
+                        <label for="exampleInputEmail1">LOWER LIMIT OF COMFORT(TEMPERATURE)</label>
+                        <input name = "low" type="text">
+                        <small id="emailHelp" class="form-text text-muted">Enter the temperature in degree celcius.</small>
+                      </div>
+                      
+                      <div class="form-group">
+                        <label for="exampleInputEmail1">HIGHER LIMIT OF COMFORT(TEMPERATURE)</label>
+                        <input name = "high" type="text">
+                        <small id="emailHelp" class="form-text text-muted">Enter the temperature in degree celcius.</small>
+                      </div>
+
+                      <div class="form-group">
+                        <label for="exampleInputEmail1">TYPE OF CONSTRUCTION(REFER TO RIGHT SIDE) </label>
+                        <input name = "time_shift" type="text">
+                        <small id="emailHelp" class="form-text text-muted">Enter as shown on the right side.</small>
+                      </div>
+                        
+                        
+                        <input type="submit" >
+                      </form>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-8" style="height: 100vh">
+            <div class="card-group">
+              <div class="card">
+                <img src="/static/red.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Brick</h5>
+                  <p class="card-text">If your construction type uses red bricks, enter the type of construction as 'Red Brick'.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+              <div class="card">
+                <img src="/static/concrete.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Concrete Brick</h5>
+                  <p class="card-text">If your construction type uses red bricks, enter the type of construction as 'Concrete Brick'.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-          <input type="submit" >
-        </form>
+      </div>  
+
+
+    
+    
+    
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    
+    
+    
 </body>
 </html>
