--- a/templates/comfort.html
+++ b/templates/comfort.html
@@ -36,38 +36,36 @@
             <div class="card bg-light" style="height: 0vmax;">
                 <div class="card-body">
                   <div class="alert alert-primary" role="alert">
-                    Step 1 : Use the map on this page to find your location.
+                    Step 1 : On the right side of the screen, you may find the available types of construction.
                   </div>
                   <div class="alert alert-primary" role="alert">
-                    Step 2 : Enter the latitude and longitude from the map, followed by the time shift.
+                    Step 2 : Enter the name of construction as shown on the screen based on your choice.
                   </div>
                   <div class="alert alert-primary" role="alert">
                     Step 3 : Click on submit!
                   </div>
                   <div class="alert alert-danger" role="alert">
-                    NOTE : Please enter only the latitude and longitude value. They are typically of the form XX.XXXXXX.
+                    NOTE : Please enter the type of construction exactly as shown on the right side of the screen.
                   </div>
-                  <div class="alert alert-danger" role="alert">
-                    NOTE : Please enter time shift in the form X.XX or -X.XX.
-                  </div>
-                    <form action="/input1">
+
+                    <form action="/showtime">
                       
                       <div class="form-group">
-                        <label for="exampleInputEmail1">LATITUDE</label>
-                        <input name = "latitude" type="text">
-                        <small id="emailHelp" class="form-text text-muted">Enter the latitude from map.</small>
+                        <label for="exampleInputEmail1">LOWER LIMIT OF COMFORT(TEMPERATURE)</label>
+                        <input name = "low" type="text">
+                        <small id="emailHelp" class="form-text text-muted">Enter the temperature in degree celcius.</small>
                       </div>
                       
                       <div class="form-group">
-                        <label for="exampleInputEmail1">LONGITUDE</label>
-                        <input name = "longitude" type="text">
-                        <small id="emailHelp" class="form-text text-muted">Enter the longitude from map.</small>
+                        <label for="exampleInputEmail1">HIGHER LIMIT OF COMFORT(TEMPERATURE)</label>
+                        <input name = "high" type="text">
+                        <small id="emailHelp" class="form-text text-muted">Enter the temperature in degree celcius.</small>
                       </div>
 
                       <div class="form-group">
-                        <label for="exampleInputEmail1">TIME-SHIFT</label>
-                        <input name = "time_shift" type="text">
-                        <small id="emailHelp" class="form-text text-muted">Enter the Time Shift.</small>
+                        <label for="exampleInputEmail1">TYPE OF CONSTRUCTION(REFER TO RIGHT SIDE) </label>
+                        <input name = "construction" type="text">
+                        <small id="emailHelp" class="form-text text-muted">Enter as shown on the right side.</small>
                       </div>
                         
                         
@@ -76,11 +74,24 @@
                 </div>
             </div>
           </div>
-          <div class="col-md-8">
-            <div class="card">
+          <div class="col-md-8" style="height: 100vh">
+            <div class="card-group">
+              <div class="card">
+                <img src="/static/red.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <div id="mapid"></div>
+                  <h5 class="card-title">Red Brick</h5>
+                  <p class="card-text">If your construction type uses red bricks, enter the type of construction as 'Red Brick'.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
+              </div>
+              <div class="card">
+                <img src="/static/concrete.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Concrete Brick</h5>
+                  <p class="card-text">If your construction type uses red bricks, enter the type of construction as 'Concrete Brick'.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -89,40 +100,6 @@
 
     
     
-    <script>
-        const mymap = L.map('mapid').setView([52.5200, 13.4050], 10);
-
-        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1Ijoicmh0bW5uIiwiYSI6ImNrZDFmeXBoejEzNmMyd291MGtoeXh6ODQifQ.2DEj5EW9Yu0-SCuqWPEHeg', {
-        attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-        maxZoom: 18,
-        id: 'mapbox/streets-v11',
-        tileSize: 512,
-        zoomOffset: -1,
-        accessToken: 'your.mapbox.access.token'
-        }).addTo(mymap);
-
-
-        function onMapClick(e) {
-
-        var position = e.latlng.toString();
-        var pos = position.search(",");
-        var end = position.length;
-        var lttd = position.slice(7,pos);
-        var lgtd = position.slice(pos+1,end-1); 
-        
-                
-        var popup = L.popup();
-            popup
-        .setLatLng(e.latlng)
-        .setContent("Latitude : " + lttd +"    Longitude : " + lgtd)
-        .openOn(mymap);
-        var marker = e.latlng;
-   
-        }
-        mymap.on('click', onMapClick);
-        
-        
-    </script>
     
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
