--- a/templates/comfort.html
+++ b/templates/comfort.html
@@ -48,7 +48,7 @@
                     NOTE : Please enter the type of construction exactly as shown on the right side of the screen.
                   </div>
 
-                    <form action="/input1">
+                    <form action="/showtime">
                       
                       <div class="form-group">
                         <label for="exampleInputEmail1">LOWER LIMIT OF COMFORT(TEMPERATURE)</label>
@@ -64,7 +64,7 @@
 
                       <div class="form-group">
                         <label for="exampleInputEmail1">TYPE OF CONSTRUCTION(REFER TO RIGHT SIDE) </label>
-                        <input name = "time_shift" type="text">
+                        <input name = "construction" type="text">
                         <small id="emailHelp" class="form-text text-muted">Enter as shown on the right side.</small>
                       </div>
                         
