--- a/templates/data.html
+++ b/templates/data.html
@@ -50,26 +50,11 @@
         <h1 class="display-4">NERKS.</h1>
         <p class="lead">We have tried to present the documentation of the project. Feel free to get in touch with the team for additional clarity in our methodology.</p>
         <hr class="my-4">
-        <p>Goal : 
-          Our aim is to establish a platform which provides recommendation to the user, about the thickness of walls of particular construction type, such as to maintain maximum probability of thermal comfort inside the building.
-          </p>
-        <hr class="my-4">
-        <p>Theory :
-          The outer surface of any building represents the first line of defence against external thermal forces. External envelope of low-rise buildings represents a major source of thermal load. Roof area in low-rise buildings represents a major portion of the envelope area and in many buildings might exceed 50% of the envelope area. While the surface temperature of the building is usually higher than that of the air ,careful treatment of the roof surface is essential in order to reduce heat gain. The selection of absorptivity and emissivity characteristics of roof materials in the defence against solar radiation impacts are also very important. 
-          
-          The prediction of the energy exchange between the exterior surfaces of a building or other construction and the outdoor environment cannot
-          readily be reduced to a simple basis. The dominant weather elements which affect this energy exchange are sunshine, air temperature and wind. In addition, the shape and orientation of the building and its relationship to the ground and surrounding objects, as well as the absorptivity and emissivity characteristics of the surfaces involved enter into the problem. Additional complication is provided by the effects of rain, condensation and evaporation. Fortunately these latter effects are not always involved and so, as is done in this report, they are usually disregarded. Even without them the problem is difficult enough.
-          The normal meteorological readings which are taken do not adequately describe the weather for purposes of calculating its effect upon the surface energy exchange, particularly when sunshine is involved. Even if all the individual factors are measured there remains the problem of recombining these multiple streams of variables in the calculation. There is, fortunately, a way of achieving some simplification; a combined factor called sol-air temperature can be used so that it becomes necessary only to deal with a single stream of data.
-          
-          Sol-air temperature is a fictitious temperature which represents as defined by ASHRAE the temperature of the outdoor air that , in the absence of all radiation changes , gives the same rate of the heat entry into the surface as would be the combination of incident solar radiation , radiant energy exchange with the sky and other outdoor surroundings , and convictive heat exchange with the outdoor air. Sol air temperature helps us to calculate the temperature of outside walls which is most essential for our calculation.
-          
-          It is quite difficult to quantify a common thermal comfort characteristic for every person, since personal comfort requirements vary from person to person. We have decided to let the user define his/her own comfort criteria, and we provide them with results accordingly.
-          
-          The required temperature and humidity inside the room, from the user provides us with the basis of estimating inside wall temperature range. From our individual dataset of different type of construction and variation of temperature across the wall, we can formulate the change of temperature for different wall thickness. We will apply this methodology, to determine the different wall thickness of the building, such that the inside condition remains in thermal comfort. We calculate the mean thickness of wall, such that the probability of remaining in thermal comfort zone remains high throughout the year. 
-                    </p>
-        <hr class="my-4">
-        <p>Download the detailed documentation here.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Download</a>
+
+
+      </div>
+      <div style="height: 100vh;">
+        <iframe src="../pdf.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
       </div>
 
 
