--- a/templates/results.html
+++ b/templates/results.html
@@ -24,7 +24,13 @@
         <p>Aww yeah, you did a NERKS analysis of your proposed building.</p>
         <hr>
         <p>Here's some interesting data</p>
-        <p>NERKS optimal wall thickness : {{wt}}</p>
+        <p>NERKS optimal wall thickness : {{wt}} cm</p>
+        <p>Number of comfort hours : {{cmf}}</p>
+        <p>Number of hot hours : {{hh}}</p>
+        <p>Number of cold hours : {{ch}}</p>
+        <p>Energy required for heating : {{eh}} KWh</p>
+        <p>Energy required for cooling : {{ec}} KWh</p>
+        <p>Total energy requirement : {{et}} KWh</p>
       </div>
 
 
