--- a/templates/data.html
+++ b/templates/data.html
@@ -54,7 +54,7 @@
 
       </div>
       <div style="height: 100vh;">
-        <iframe src="../pdf.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
+        <iframe src="/static/pdf.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
       </div>
 
 
