--- a/templates/ws.html
+++ b/templates/ws.html
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-          <img src="/static/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+          <img src="/static/logo.jpeg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
           NERKS.
         </a>
       </nav>
